--- a/task/templates/es_template.html
+++ b/task/templates/es_template.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    
         <!-- Top navigation -->
 <div class="row nav navbar sticky-top navbar-light bg-light border-bottom border-dark">
 
@@ -24,7 +23,7 @@
     
     <!-- Right-aligned links -->
     <div class="right">
-      <a href="/en">ENG</a>/<a href="/es">ESP</a>
+        <a href="/en">ENG</a>/<a href="/es">ESP</a>
     </div>
   </div>
         <br>
@@ -35,7 +34,7 @@
                     <a href="{{ item['link'] }}">
                     <div class="media-body">
                         <h6 class="mt-0 mb-1">{{ item['pub_date'][5:16] }}</h6>
-                        <h5 class="mt-0 mb-1">{{ item["title"] }}</h5>
+                        <h5 class="mt-0 mb-1">{{ item["es_title"] }}</h5>
                         {{ item['description'] }}
                         <p class="text-size">BY {{ item['creator'] | upper }}</p>
                     </div>
